[gd_scene load_steps=6 format=2]

[ext_resource path="res://Autoload/GlobalAudio.gd" type="Script" id=1]
[ext_resource path="res://Assets/sfx/button.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/sfx/Venus.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sfx/Map.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sfx/Mars.wav" type="AudioStream" id=5]

[node name="GlobalAudio" type="Node"]
script = ExtResource( 1 )

[node name="SceneChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="LevelSelectMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"
